--- a/src/styles/templates/product.scss
+++ b/src/styles/templates/product.scss
@@ -1370,4 +1370,27 @@
         position: relative;
     }
   }
+
+  .installation {
+
+    .videos {
+      padding: 0 20px;
+    }
+
+    .video {
+      overflow: hidden;
+      padding-top: 56.25%;
+      position: relative;
+      margin-bottom: 30px;
+    }
+
+    iframe {
+       border: 0;
+       height: 100%;
+       left: 0;
+       position: absolute;
+       top: 0;
+       width: 100%;
+    }
+  }
 }
