--- a/src/templates/product.liquid
+++ b/src/templates/product.liquid
@@ -1,6 +1,8 @@
 {% section 'product' %}
 {% section 'product-feature' %}
 {% section 'product-tab' %}
+{% section 'stamped-review' %}
+{% section 'faq' %}
 
 <script type="application/ld+json">
 {
