--- a/src/sections/product.liquid
+++ b/src/sections/product.liquid
@@ -21,6 +21,9 @@
       {% endfor %}
     {% endcapture %}
 
+    <div id="loading-placeholder" style="min-height: 800px;">
+    </div>
+
     <product-form raw-image-group-data="{{imageGroupData}}" raw-variants-data="{{variantsData}}" default-variant-id="{{variant_selected.id}}" loading-gif-url="{{ 'loader.gif' | asset_url }}">
       <template #brief>
         <h1>{{product.title}}</h1>
