Chore: no loading on mobile

--- a/src/styles/templates/product.scss
+++ b/src/styles/templates/product.scss
@@ -441,7 +441,11 @@
       }
 
       .loading {
-        padding-top: 128px;
+        display: none;
+
+        @media screen and (min-width: $tablet) {
+          padding-top: 128px;
+        }
       }
     }
   }
