Chore: fix loading

--- a/src/styles/templates/product.scss
+++ b/src/styles/templates/product.scss
@@ -441,8 +441,11 @@
       }
 
       .loading {
+        display: none;
+
         @media screen and (min-width: $tablet) {
           padding-top: 128px;
+          display: block;
         }
       }
     }
